--- a/javascript/index.html
+++ b/javascript/index.html
@@ -21,6 +21,7 @@
     <h1>Javascript</h1>
     <!-- <script src="./src/ArgumentoVsParametros.js"></script> -->
     <!-- <script src="./src/OperadorRest.js"></script> -->
-    <script src="./src/OperadorSpread.js"></script>
+    <!-- <script src="./src/OperadorSpread.js"></script> -->
+    <script src="./src/callback.js"></script>
   </body>
 </html>
